LU-20146 osd-ldiskfs: use OBD_ALLOC_LARGE() in osd_oxc_add()

__mdt_stripe_get()->mdt_big_xattr_get()->osd_xattr_get->osd_oxc_add()
was failing order 4 page allocations. Use OBD_ALLOC_LARGE() in
osd_oxc_add(), to avoid failures in such cases.

Fixes: 3a5db1d89a ("LU-8159 osd-ldiskfs: cache xattr in osd-ldiskfs")
HPE-bug-id: LUS-13322
Signed-off-by: Nikitas Angelinas <nikitas.angelinas@hpe.com>
Change-Id: Ic6b7e9797ee9609ca05e626d9de3b81fb9249af3
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65359
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andrew Perepechko <andrew.perepechko@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>